Build: users can now create new projects and save them to localstorage

--- a/src/template.html
+++ b/src/template.html
@@ -41,7 +41,7 @@
                 <ul>
                     <li>
                         <span class="material-symbols-outlined">inventory_2</span>
-                        Project 1
+                        <p>Project 1</p>
                         <span class="material-symbols-outlined deleteProjectBtn">delete</span>
                     </li>
                 </ul>
